// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datagrid component Renders data grid component 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="dscTable dscTableFixedScroll"
      >
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="-1"
        />
        <div
          class="euiDataGrid__focusWrap"
          data-focus-lock-disabled="disabled"
        >
          <div
            class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter"
            data-test-subj="docTable"
          />
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Datagrid component renders data grid with different timestamp 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="dscTable dscTableFixedScroll"
      >
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="-1"
        />
        <div
          class="euiDataGrid__focusWrap"
          data-focus-lock-disabled="disabled"
        >
          <div
            class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter"
            data-test-subj="docTable"
          />
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Datagrid component renders data grid with no timestamp 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow dscResultCount"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiText euiText--medium"
          >
            <strong
              data-test-subj="discoverQueryHits"
            >
              1,390
            </strong>
             
            hits
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="dscTable dscTableFixedScroll"
      >
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="-1"
        />
        <div
          class="euiDataGrid__focusWrap"
          data-focus-lock-disabled="disabled"
        >
          <div
            class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter"
            data-test-subj="docTable"
          />
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</body>
`;
